--- a/tracker_service/requirements.txt
+++ b/tracker_service/requirements.txt
@@ -4,6 +4,7 @@ cffi==1.16.0
 charset-normalizer==3.3.2
 cryptography==42.0.5
 Django==5.0.2
+django-choices==2.0.0
 django-cors-headers==4.3.1
 django-oauth-toolkit==2.3.0
 idna==3.6
