--- a/auth_service/requirements.txt
+++ b/auth_service/requirements.txt
@@ -15,3 +15,6 @@ requests==2.31.0
 sqlparse==0.4.4
 typing_extensions==4.10.0
 urllib3==2.2.1
+django-choices==2.0.0
+jsonschema==4.21.1
+jsonschema-specifications==2023.12.1
