compose with several services, produce and consume

--- a/Dockerfile_auth_service
+++ b/Dockerfile_auth_service
@@ -2,6 +2,7 @@ FROM python:3.11
 
 ENV PYTHONDONTWRITEBYTECODE=1
 ENV PYTHONUNBUFFERED=1
+ENV KAFKA_BROKER_URL='broker:29092'
 
 ENV project_dir=/code
 
@@ -20,5 +21,5 @@ RUN pip3 install --no-cache-dir -r ./auth_service/requirements.txt
 # туда же registry
 RUN pip3 install --no-cache-dir ./event_schema_registry
 
-CMD python3 ./auth_service/manage.py runserver 8000 --traceback
+CMD python3 ./auth_service/manage.py runserver 8002 --traceback
 #CMD ls -lta
