--- a/Dockerfile_tracker_service
+++ b/Dockerfile_tracker_service
@@ -21,5 +21,5 @@ RUN pip3 install --no-cache-dir -r ./tracker_service/requirements.txt
 # туда же registry
 RUN pip3 install --no-cache-dir ./event_schema_registry
 
-CMD python3 ./tracker_service/manage.py runserver 0.0.0.0:8001 --traceback
+CMD python3 ./tracker_service/manage.py runserver 0.0.0.0:8001
 #CMD ls -lta
